روبوت  إضافة: [[ca:Bay (Somàlia)]]

--- a/Baay.mw
+++ b/Baay.mw
@@ -33,6 +33,7 @@ Gobolka Bay magaalo madaxdiisa waa Baydhabo, dhaqaalihiisuna wuxuu ku tiirsanyah
 {{Gobolada_Soomaaliya}}
 [[Category:Gobolada_Soomaaliya]]
 
+[[ca:Bay (Somàlia)]]
 [[de:Bay (Somalia)]]
 [[en:Bay, Somalia]]
 [[es:Bay (Somalia)]]
