روبوت  إضافة: [[pt:Berbera]]

--- a/Berbera.mw
+++ b/Berbera.mw
@@ -16,6 +16,7 @@ Taas oo ay ka dambeysey xayiraadi Carabtu kusoo rogtey xoolihi somalida sanadadi
 [[ja:ベルベラ]]
 [[nl:Berbera]]
 [[pl:Berbera]]
+[[pt:Berbera]]
 [[ru:Бербера]]
 [[sh:Berbera]]
 [[sr:Berbera]]
