--- a/Sanaag.mw
+++ b/Sanaag.mw
@@ -30,12 +30,8 @@ image_location = Somalia_regions_map_Sanaag.svg|
 * Dhahar
 * maydh
 * xiis
-* shidalehe
-* goof
-* durdur
-[[Gobolka sanaag]]
 
-{{Gobolada somaliland}
+{{Gobolada Soomaaliya}}
 
 [[Category:Gobolada_Soomaaliya]]
 
