روبوت  إضافة: [[lij:Addis Abeba]]

--- a/Addis_Abeba.mw
+++ b/Addis_Abeba.mw
@@ -39,6 +39,7 @@ waa caasimad [[Itoobiya]].
 [[ka:ადის-აბება]]
 [[ko:아디스아바바]]
 [[la:Neanthopolis]]
+[[lij:Addis Abeba]]
 [[lt:Adis Abeba]]
 [[lv:Adisabeba]]
 [[mg:Addis Abeba]]
