روبوت  تعديل: [[haw:‘Amelika Hema]]

--- a/Ameerikada_koonfureed.mw
+++ b/Ameerikada_koonfureed.mw
@@ -49,7 +49,7 @@
 [[gl:América do Sur]]
 [[gu:દક્ષીણ અમેરિકા]]
 [[hak:Nàm-mî-chû]]
-[[haw:ʻAmelika Hema]]
+[[haw:‘Amelika Hema]]
 [[he:אמריקה הדרומית]]
 [[hi:दक्षिणी अमरीका]]
 [[hr:Južna Amerika]]
