*Empty MediaWiki Message*

--- a/Ceerigaabo.mw
+++ b/Ceerigaabo.mw
@@ -1,1 +1,1 @@
-xarunta  goboklka  sanaag  ee  ceergaabo    waa  dalka   somaliland  by xuseen  ceergaabo
+xuseen_112@hotmail.com ceergaabo  waa  jsl waligeed  way ahayd   iminkana  waytahay
