*Empty MediaWiki Message*

--- a/Frankfurt.mw
+++ b/Frankfurt.mw
@@ -4,7 +4,7 @@
 
 *[http://www.frankfurt.de/ Official Website]
 
-{{Commons|Frankfurt am Main}}
+{{Commonscat|Frankfurt am Main}}
 
 [[Category:Yurub]]
 
