روبوت  إضافة: [[kl:Tysklandi]]

--- a/Jarmal.mw
+++ b/Jarmal.mw
@@ -84,6 +84,7 @@ Wadan [[Yurub]] ku yaala oo [[faransis]]ka iyo [[denmark]]i xad la wadaaga. Waan
 [[jv:Jerman]]
 [[ka:გერმანია]]
 [[kk:Алмания]]
+[[kl:Tysklandi]]
 [[kn:ಜರ್ಮನಿ]]
 [[ko:독일]]
 [[ks:जर्मनी]]
