روبوت  تعديل: [[bar:Schwen]]

--- a/Iswiidhan.mw
+++ b/Iswiidhan.mw
@@ -15,7 +15,7 @@
 [[arc:ܣܘܝܕ]]
 [[ast:Suecia]]
 [[az:İsveç]]
-[[bar:Schweden]]
+[[bar:Schwen]]
 [[bat-smg:Švedėjė]]
 [[be:Швецыя]]
 [[be-x-old:Швэцыя]]
