*Empty MediaWiki Message*

--- a/Category:Kimisteri.mw
+++ b/Category:Kimisteri.mw
@@ -1,4 +1,4 @@
-'''WHAT IS CHEMISTRY?'''
+'''waa maxay kemistari?'''
 ---
 Kemistari waa barashada aasaasiga ah ee sayniska maatarka( matter) iyo iskudhiskiisa, iyo hababka ay u falgalaan. Barashada Kemistarigu waxa uu si qoto dheer uga hadlaa waxayaabahan soo socda.
 
