*Empty MediaWiki Message*

--- a/Category:Kimisteri.mw
+++ b/Category:Kimisteri.mw
@@ -1,20 +1,86 @@
-'''waa maxay kemistari?'''
----
-Kemistari waa barashada aasaasiga ah ee sayniska maatarka( matter) iyo iskudhiskiisa, iyo hababka ay u falgalaan. Barashada Kemistarigu waxa uu si qoto dheer uga hadlaa waxayaabahan soo socda.
+Qeybtaan waxaa loogu talagalay maqaalada ka hadlay cilmiga kimisteriga 
+[[Category:Saynis]]
 
-1) qaababka iyo hababka maatarka(structure of atom)
-2)Iskudhiska kiimikaad
-3)kiimikeeynta warshedaad(industrial chemistry)
-4)Qaabaka kimistriga noolaha (industrial chemistry)
-
-'''Matter'''
-
-matter waa waxii mugleh meel marrana buuxsha.koonkaan aynu ku noolnahay waxa u ka koobanyahay maatar.hadii aad fiiriso agagaarkaaaga shay walba waa maater.
-maaterka waxaa loo qeybiyaa 3 qeybood oo kala ah Adke(solid), Dareere(liquid), iyo neef(air).
-
-
-
-
-''
-'''A.Fatah Ahmed Farabadan'''
- boqorka03@hotmail.com
+[[af:Kategorie:Chemie]]
+[[als:Kategorie:Chemie]]
+[[an:Categoría:Quimica]]
+[[ar:تصنيف:كيمياء]]
+[[ast:Categoría:Química]]
+[[az:Kateqoriya:Kimya]]
+[[be:Катэгорыя:Хімія]]
+[[be-x-old:Катэгорыя:Хімія]]
+[[bg:Категория:Химия]]
+[[br:Rummad:Kimiezh]]
+[[bs:Kategorija:Hemija]]
+[[ca:Categoria:Química]]
+[[cs:Kategorie:Chemie]]
+[[csb:Kategòrëjô:Chemijô]]
+[[cy:Categori:Cemeg]]
+[[da:Kategori:Kemi]]
+[[de:Kategorie:Chemie]]
+[[el:Κατηγορία:Χημεία]]
+[[en:Category:Chemistry]]
+[[eo:Kategorio:Kemio]]
+[[es:Categoría:Química]]
+[[et:Kategooria:Keemia]]
+[[eu:Kategoria:Kimika]]
+[[fi:Luokka:Kemia]]
+[[fr:Catégorie:Chimie]]
+[[ga:Catagóir:Ceimic]]
+[[gl:Category:Química]]
+[[he:קטגוריה:כימיה]]
+[[hr:Kategorija:Kemija]]
+[[hsb:Kategorija:Chemija]]
+[[hu:Kategória:Kémia]]
+[[ia:Categoria:Chimia]]
+[[id:Kategori:Kimia]]
+[[io:Category:Kemio]]
+[[is:Flokkur:Efnafræði]]
+[[it:Categoria:Chimica]]
+[[ja:Category:化学]]
+[[ka:კატეგორია:ქიმია]]
+[[kn:ವರ್ಗ:ರಸಾಯನಶಾಸ್ತ್ರ]]
+[[ko:분류:화학]]
+[[ku:Kategorî:Kîmya]]
+[[kw:Category:Kymystry]]
+[[la:Categoria:Chemica]]
+[[lad:Category:Kemika]]
+[[lb:Category:Chimie]]
+[[li:Categorie:Sjemie]]
+[[lmo:Category:Chímega]]
+[[ln:Category:Kémi]]
+[[lt:Kategorija:Chemija]]
+[[lv:Kategorija:Ķīmija]]
+[[mi:Category:Mātauranga matū]]
+[[mk:Категорија:Хемија]]
+[[ms:Kategori:Kimia]]
+[[mt:Category:Kimika]]
+[[nds:Kategorie:Chemie]]
+[[nl:Categorie:Scheikunde]]
+[[nn:Kategori:Kjemi]]
+[[no:Kategori:Kjemi]]
+[[oc:Categoria:Quimia]]
+[[os:Категори:Хими]]
+[[pl:Kategoria:Chemia]]
+[[pt:Categoria:Química]]
+[[ro:Categorie:Chimie]]
+[[ru:Категория:Химия]]
+[[scn:Category:Chìmica]]
+[[sco:Category:Chemistry]]
+[[sh:Category:Kemija]]
+[[simple:Category:Chemistry]]
+[[sk:Kategória:Chémia]]
+[[sl:Kategorija:Kemija]]
+[[sq:Category:Kimi]]
+[[sr:Категорија:Хемија]]
+[[su:Kategori:Kimia]]
+[[sv:Kategori:Kemi]]
+[[sw:Category:Kemia]]
+[[th:หมวดหมู่:เคมี]]
+[[tr:Kategori:Kimya]]
+[[uk:Категорія:Хімія]]
+[[vi:Thể loại:Hóa học]]
+[[yi:קאַטעגאָריע:כעמיע]]
+[[zh:Category:化学]]
+[[zh-min-nan:Category:Hòa-ha̍k]]
+[[zh-yue:Category:化學]]
