It took longtime to realize the removal of the information. Sorry

--- a/Bilaha.mw
+++ b/Bilaha.mw
@@ -1,20 +1,34 @@
-'''Taariikh-da Maxamed Deeq Cabdalla''' waa wariye & farsamayaqaan caan ah oo ka Tirsan Hayada Warbaahinta soomaaliyeed ee SBC Boosaaso waxaana uu howhsa warbaahinta ku soo jiray muddo sannado ah waxaana uu howshani bilaabay
+== Bilaha afka soomaaliga ==
+
+Sanadka miilaadiyada wuxuu ka koobanyahay 12 biloood. Macagyada bilahaas dhnaka afka soomaaliga waxaa loo qoraa sida hoos ku qoran. 
+
+{{Bilaha}}
+
+* [[Janaayo]] 	  	
+* [[Febraayo]] 	  	
+* [[Maarso]] 	
+* [[Abriil]] 	  	
+* [[Maajo]] 	  	
+* [[Juun]] 	 
+* [[Luuliyo]] 	  	
+* [[Agoosto]] 	  	
+* [[Sebteembar]] 	 
+* [[Oktoobar]] 	  	
+* [[Nofeembar]] 	  	
+* [[Diseembar]]
 
 [[als:Monat]]
 [[ang:Mōnaþ]]
 [[ar:شهر]]
 [[arc:ܝܪܚܐ]]
-[[ast:Mes]]
 [[be-x-old:Месяц (адзінка вымярэння часу)]]
 [[bg:Месец]]
 [[bs:Mjesec (period)]]
 [[ca:Mes]]
-[[cbk-zam:Mes]]
 [[cs:Měsíc (kalendářní)]]
 [[cv:Уйăх]]
 [[da:Måned]]
 [[de:Monat]]
-[[eml:Mès]]
 [[en:Month]]
 [[eo:Monato]]
 [[es:Mes]]
@@ -39,9 +53,7 @@
 [[ja:月 (暦)]]
 [[jbo:masti]]
 [[ka:თვე]]
-[[kg:Ngonda (manaka)]]
-[[kk:Ай]]
-[[kn:ತಿಂಗಳು]]
+[[kj:Omwedi]]
 [[ksh:Moohnd]]
 [[kw:Mis]]
 [[la:Mensis]]
@@ -75,7 +87,7 @@
 [[ta:மாதம்]]
 [[th:เดือน]]
 [[tl:Buwan (panahon)]]
-[[tpi:Mun (taim)]]
+[[tpi:Mun (bilong yia)]]
 [[tr:Ay (zaman)]]
 [[uk:Місяць (календарний)]]
 [[yi:מאנאט]]
