--- a/Kimisteri.mw
+++ b/Kimisteri.mw
@@ -12,3 +12,5 @@ Kimistari waa barashada aasaasiga ah ee sayniska maatarka( matter) iyo iskudhisk
 :matter waa waxii mugleh meel marrana buuxsha.koonkaan aynu ku noolnahay waxa u ka koobanyahay maatar.hadii aad fiiriso agagaarkaaaga shay walba waa maater. maaterka waxaa loo qeybiyaa 3 qeybood oo kala ah Adke(solid), Dareere(liquid), iyo neef(air).
 
 [[Category:Kimisteri]]
+
+[[fr:Chimie]]
