--- a/Kimisteri.mw
+++ b/Kimisteri.mw
@@ -14,3 +14,94 @@ Kimistari waa barashada aasaasiga ah ee sayniska maatarka( matter) iyo iskudhisk
 [[Category:Kimisteri]]
 
 [[fr:Chimie]]
+[[ga:Ceimic]]
+[[gd:Dùileòlachd]]
+[[gl:Química]]
+[[gu:રસાયણ શાસ્ત્ર]]
+[[gv:Kemmig]]
+[[he:כימיה]]
+[[hi:रसायन शास्त्र]]
+[[hr:Kemija]]
+[[ht:Chimi]]
+[[hu:Kémia]]
+[[hy:Քիմիա]]
+[[ia:Chimia]]
+[[id:Kimia]]
+[[ie:Chimie]]
+[[io:Kemio]]
+[[is:Efnafræði]]
+[[it:Chimica]]
+[[ja:化学]]
+[[jbo:xumske]]
+[[jv:Kimia]]
+[[ka:ქიმია]]
+[[kn:ರಸಾಯನಶಾಸ್ತ್ರ]]
+[[ko:화학]]
+[[ku:Kîmya]]
+[[kw:Kymystry]]
+[[la:Chemia]]
+[[lad:Kemika]]
+[[lb:Chimie]]
+[[li:Sjemie]]
+[[lmo:Chímica]]
+[[ln:Kémi]]
+[[lo:ເຄມີສາດ]]
+[[lt:Chemija]]
+[[lv:Ķīmija]]
+[[mi:Mātauranga matū]]
+[[mk:Хемија]]
+[[ml:രസതന്ത്രം]]
+[[mn:Хими]]
+[[mo:Кимие]]
+[[ms:Kimia]]
+[[nds:Chemie]]
+[[nds-nl:Scheikunde]]
+[[nl:Scheikunde]]
+[[nn:Kjemi]]
+[[no:Kjemi]]
+[[nov:Kemie]]
+[[nrm:Chimie]]
+[[oc:Quimia]]
+[[os:Хими]]
+[[pa:ਰਸਾਇਣ ਵਿਗਿਆਨ]]
+[[pih:Kemistrii]]
+[[pl:Chemia]]
+[[ps:کيميا]]
+[[pt:Química]]
+[[qu:Chaqllisinchi]]
+[[rm:Chemia]]
+[[ro:Chimie]]
+[[ru:Химия]]
+[[ru-sib:Химия]]
+[[sc:Chìmica]]
+[[scn:Chìmica]]
+[[sco:Chemistry]]
+[[sh:Kemija]]
+[[simple:Chemistry]]
+[[sk:Chémia]]
+[[sl:Kemija]]
+[[sm:Kemisi]]
+[[sq:Kimia]]
+[[sr:Хемија]]
+[[su:Kimia]]
+[[sv:Kemi]]
+[[sw:Kemia]]
+[[ta:வேதியியல்]]
+[[te:రసాయన శాస్త్రము]]
+[[tg:Химия]]
+[[th:เคมี]]
+[[tk:Kimya]]
+[[tl:Kimika]]
+[[tr:Kimya]]
+[[tt:Ximiä]]
+[[uk:Хімія]]
+[[vec:Chìmega]]
+[[vi:Hóa học]]
+[[vo:Kiemav]]
+[[war:Kímika]]
+[[xh:IKhemistri]]
+[[yi:כעמיע]]
+[[zh:化学]]
+[[zh-classical:化學]]
+[[zh-min-nan:Hòa-ha̍k]]
+[[zh-yue:化學]]
