*Empty MediaWiki Message*

--- a/Kimisteri.mw
+++ b/Kimisteri.mw
@@ -1,3 +1,4 @@
+[[Image:TaxolTotalSynthesisColor.png|thumb|]]
 '''Waa maxay [[Kimisteri]]?'''
 
 Kimistari waa barashada aasaasiga ah ee sayniska maatarka( matter) iyo iskudhiskiisa, iyo hababka ay u falgalaan. Barashada Kemistarigu waxa uu si qoto dheer uga hadlaa waxayaabahan soo socda.
