--- a/Ceelafweyn.mw
+++ b/Ceelafweyn.mw
@@ -1,1 +1,5 @@
-wdegmada  ceel afweyn waa   gobolka  sanaag  ee  jamhuuriyada  somaliland
+wdegmada  ceel afweyn waa   gobolka  sanaag  ee  jamhuuriyada  [[somaliland]]
+
+[[Category:Soomaaliya]]
+
+[[ro:CeelAfweyn]]
