--- a/Ceerigaabo.mw
+++ b/Ceerigaabo.mw
@@ -1,1 +1,5 @@
-xuseen_112@hotmail.com ceergaabo  waa  jsl waligeed  way ahayd   iminkana  waytahay
+xarunta  goboklka  sanaag  ee  ceergaabo    waa  dalka   somaliland  by xuseen  ceergaabo
+
+[[en:Ceerigaabo]]
+[[es:Erigabo]]
+[[pt:Erigavo]]
