*Empty MediaWiki Message*

--- a/Ceerigaabo.mw
+++ b/Ceerigaabo.mw
@@ -1,5 +1,7 @@
 xarunta  goboklka  sanaag  ee  ceergaabo    waa  dalka   [[Somaliland]] by xuseen  ceergaabo.
 
+[[Category:Soomaaliya]]
+
 [[en:Ceerigaabo]]
 [[es:Erigabo]]
 [[pt:Erigavo]]
