--- a/Sool.mw
+++ b/Sool.mw
@@ -21,20 +21,10 @@ image_location = Somalia_regions_map_Sool.svg|
 Gobolka [[Sool]] wuxuu ku yaalaa woqooyiga-bari ee [[Soomaaliya]] waxaana caasimad u ah magaalada [[Laascaanood]].
 
 ==Degmooyinka gobolka Sool==
-* [[Laascaanood]]
+* [[Laascaanood]]waa magalo madaxda
 * [[Caynaba]] waxay dhanka waqooyi kagtaa laascaanood
-* [[Taleex]]
-
-{{Gobolada Soomaaliya}}
-
-[[Category:Gobolada_Soomaaliya]]
-
-[[de:Sool (Somalia)]]
-[[en:Sool]]
-[[es:Sool]]
-[[eu:Sool]]
-[[fr:Sool (Somalie)]]
-[[it:Sool (regione della Somalia)]]
-[[nl:Sool (Somalië)]]
-[[pt:Sool (Somália)]]
-[[sv:Sool]]
+* [[Taleex]]   waa magaladii ugu horaysay ee diyad lagu garaaco afrika
+*  (yagoori     waxay kutaala dhinaca waqooyi
+ *  Buuhoodle    waxa loo magacaabay xarunta gobolka cayn ama hawd
+                        waxa qoray Dr:c/qani maxamed diiriye
+                          dhagaxtuur_4@live.nl
