--- a/Sool.mw
+++ b/Sool.mw
@@ -23,7 +23,7 @@ Gobolka [[Sool]] wuxuu ku yaalaa woqooyiga-bari ee [[Soomaaliya]] waxaana caasim
 ==Degmooyinka gobolka Sool==
 * [[Laascaanood]]
 * [[Caynaba]] waxay dhanka waqooyi kagtaa laascaanood
-* [[Taleex]]
+* [[Taleex]] waa magaladii ugu horaysay ee diyad lagu garaaco afrika (yagoori waxay kutaala dhinaca waqooyi
 
 {{Gobolada Soomaaliya}}
 
