--- a/Malaawi.mw
+++ b/Malaawi.mw
@@ -11,6 +11,7 @@
 [[an:Malaui]]
 [[ar:ملاوي]]
 [[ast:Malaui]]
+[[bat-smg:Malavės]]
 [[bg:Малави]]
 [[bn:মালাউয়ি]]
 [[bpy:মালাবি]]
@@ -60,6 +61,7 @@
 [[lv:Malāvija]]
 [[mk:Малави]]
 [[ml:മലാവി]]
+[[mr:मलावी]]
 [[ms:Malawi]]
 [[nds:Malawi]]
 [[nl:Malawi]]
