روبوت  تعديل: [[lv:Kuruva]]

--- a/Kurów.mw
+++ b/Kurów.mw
@@ -96,7 +96,7 @@ Mudadii u dhaxaysay [[1431]] iyo [[1442]] tuulada waxay haysatay darajo [[magaal
 [[lmo:Kurów]]
 [[lo:ຄູໂຣ]]
 [[lt:Kuruvas]]
-[[lv:Kurova]]
+[[lv:Kuruva]]
 [[map-bms:Kurów]]
 [[mg:Kurów]]
 [[mk:Куров (село)]]
