*Empty MediaWiki Message*

--- a/Shiinaha.mw
+++ b/Shiinaha.mw
@@ -1,5 +1,20 @@
 [[Image:LocationPRChina.png|thumb|300px|right|Shiinaha]]
 
+China (traditional Chinese: 中國; simplified Chinese: 中国; Hanyu Pinyin: Zhōngguó (help·info); Tongyong Pinyin: Jhongguó; Wade-Giles (Mandarin): Chung1kuo²) is a cultural region, ancient civilization, and nation in East Asia. It is one of the world's oldest civilizations, consisting of states and cultures dating back more than six millennia. The stalemate of the last Chinese Civil War has resulted in two political states using the name China: the People's Republic of China (PRC), commonly known as "China," which controls mainland China, Hong Kong, and Macau; and the Republic of China (ROC), commonly known as "Taiwan," which controls the island of Taiwan and its surrounding islands. Most foreign governments officially regard the areas administered by the ROC as a part of the "PRC"; for details on the dispute, see Political status of Taiwan.
+
+China is one of the world's oldest continuous civilizations. It has the world's longest continuously used written language system, and has been the source of some of the world's great inventions, including the Four Great Inventions of ancient China: paper, the compass, gunpowder, and printing.
+
+
+== Etymology ==
+
+China is most commonly called Zhōngguó (中國 or 中国) in Mandarin Chinese. The term can be literally translated into English as "Central Kingdom" or "Central Country", the less accurate translations can be "Middle Country" and "Middle Kingdom"[1][2]. In ancient times the name referred to the "Central States" along the Yellow River valley and was not associated with any single political entity. The nomenclature gradually evolved to mean the lands under direct imperial rule.
+
+English and many other languages use various forms of the name "China" and the prefix "Sino-" or "Sin-". These forms are thought to derive from the name of the Qin Dynasty that first unified the country (221–206 BCE). "Qin" is pronounced as "Chin" which is considered the possible root of the word "China".[3]
+
+== External Links ==
+* [http://www.expo2010kina.hu EXPO Shanghai (photos, webcam)]
+
+
 {{commonscat|China|Shiinaha}}
 
 [[Category:Wadamada Aasiya]]
