روبوت  تعديل: [[ha:Mošovce]]

--- a/Mošovce.mw
+++ b/Mošovce.mw
@@ -50,7 +50,7 @@ Image:Mapa-Mosovce.png|Mošovce
 [[fr:Mošovce]]
 [[ga:Mošovce]]
 [[gl:Mošovce]]
-[[ha:موشوفتسيه]]
+[[ha:Mošovce]]
 [[haw:Mošovce]]
 [[he:מושובצה]]
 [[hi:मोशोव्चे]]
