روبوت  إضافة: [[nl:Borama]]

--- a/Boorama.mw
+++ b/Boorama.mw
@@ -19,5 +19,6 @@ Gobolka [[Awdal]] siiba magaalomadaxda gobolkan ee Boorama waxa ay kaga dwuan ta
 [[en:Boorama]]
 [[es:Boorama]]
 [[it:Boorama]]
+[[nl:Borama]]
 [[pt:Borama]]
 [[zh:伯拉瑪]]
