--- a/Talk:KMG_Soomaaliya.mw
+++ b/Talk:KMG_Soomaaliya.mw
@@ -43,5 +43,5 @@ Qoraalo kale oo waxaa jira raadraac ku samaynayo sida Soomaalida ay ugu xisaabta
 
 Qodobkaaan diba ayaan u tafaftiri doonaa insha Alaah.
 
-Saylac Sh Diini
-''Keydka Ummada'', Baardheere 2005
+Mohamed Mahad Ibarahim
+''Keydka Ummada'', FInland, Helsinki
