*Empty MediaWiki Message*

--- a/Soomaaliland.mw
+++ b/Soomaaliland.mw
@@ -7,7 +7,7 @@ Sanadku markuu ahaa 1991 ayey somaliland la soo noqotey madax banaadidoodii. Som
 
 Madaxweyneyaashii Somaliland :
 *1. [[Cabdiraxman Axmed Cali Tuur]] : [[1991]] - [[1993]]
-*2. [[Maxamed Xaaji Ibraahim Cigaal]] : [[1993]] - [[2002]]
+*2. Maxamed Xaaji Ibraahim Cigaal : [[1993]] - [[2002]]
 *3. [[Daahir Rayaale Kaahin]] : [[2002]] - 
 
 ----
