--- a/1987.mw
+++ b/1987.mw
@@ -4,6 +4,8 @@ __TOC__
 
 ==Dhacdooyin==
 ==Dhalashooyin==
+waxa dhashay sanadkan abdalle Bele Ahmed bishu markay ahyd 29 ogos.
+
 ==Dhimashooyin==
 ==Madaxda Aduunka==
 
