--- a/1987.mw
+++ b/1987.mw
@@ -4,7 +4,7 @@ __TOC__
 
 ==Dhacdooyin==
 ==Dhalashooyin==
-waxa dhashay sanadkan abdalle Bele Ahmed bishu markay ahyd 29 ogos.
+waxa dhashay sanadkan Abdalle Bele Ahmed bishu markay ahyd 29 ogos.
 
 ==Dhimashooyin==
 ==Madaxda Aduunka==
