روبوت  إضافة: [[ie:Democratic Republic de Congo]]

--- a/Jamhuuriyada_Dimuqaraadiga_Kongo.mw
+++ b/Jamhuuriyada_Dimuqaraadiga_Kongo.mw
@@ -39,6 +39,7 @@
 [[hu:Kongói Demokratikus Köztársaság]]
 [[ia:Republica Democratic del Congo]]
 [[id:Republik Demokratik Kongo]]
+[[ie:Democratic Republic de Congo]]
 [[io:Demokratial Republiko Kongo]]
 [[is:Austur-Kongó]]
 [[it:Repubblica Democratica del Congo]]
