روبوت  إضافة: [[new:कुरोव्]]

--- a/Kurów.mw
+++ b/Kurów.mw
@@ -110,6 +110,7 @@ Mudadii u dhaxaysay [[1431]] iyo [[1442]] tuulada waxay haysatay darajo [[magaal
 [[nds:Kurów]]
 [[nds-nl:Kurów]]
 [[ne:कुरुफ]]
+[[new:कुरोव्]]
 [[nl:Kurów (powiat Puławski)]]
 [[nn:Kurów]]
 [[no:Kurów]]
