روبوت  إضافة: [[ay:Uru]], [[ga:Lá]], [[kk:Күн]]

--- a/Maalin.mw
+++ b/Maalin.mw
@@ -6,6 +6,7 @@ Halkii maalin waxaa ku jira 24 (labatan iyo afar saac). [[Kalandar]]ka [[Islaamk
 [[ar:يوم]]
 [[arc:ܝܘܡܐ]]
 [[ast:Día]]
+[[ay:Uru]]
 [[bat-smg:Dėina]]
 [[be-x-old:Дзень]]
 [[bg:Ден]]
@@ -25,6 +26,7 @@ Halkii maalin waxaa ku jira 24 (labatan iyo afar saac). [[Kalandar]]ka [[Islaamk
 [[fr:Jour]]
 [[fur:Dì]]
 [[fy:Dei]]
+[[ga:Lá]]
 [[gd:Là]]
 [[gl:Día]]
 [[he:יממה]]
@@ -39,6 +41,7 @@ Halkii maalin waxaa ku jira 24 (labatan iyo afar saac). [[Kalandar]]ka [[Islaamk
 [[ja:日]]
 [[jv:Dina]]
 [[ka:დღე]]
+[[kk:Күн]]
 [[ko:날]]
 [[ku:Roj (dem)]]
 [[la:Dies]]
