روبوت  إضافة: [[ay:Mara]]

--- a/Sanad.mw
+++ b/Sanad.mw
@@ -8,6 +8,7 @@ Sanad (Luqada carabiga "[[:ar:عام]] ama "السنة" ) waa waqtiga u dhaxeeyo
 [[ar:عام]]
 [[arc:ܫܢܬܐ (ܙܒܢܐ)]]
 [[ast:Añu]]
+[[ay:Mara]]
 [[bat-smg:Metā]]
 [[be:Год]]
 [[be-x-old:Год]]
