روبوت  إضافة: [[new:युरोप]]

--- a/Yurub.mw
+++ b/Yurub.mw
@@ -124,6 +124,7 @@
 [[nds:Europa]]
 [[nds-nl:Europa (continent)]]
 [[ne:युरोप]]
+[[new:युरोप]]
 [[nl:Europa (werelddeel)]]
 [[nn:Europa]]
 [[no:Europa]]
