روبوت  تعديل: [[ay:Jallu qallta phaxsi]]

--- a/Diseembar.mw
+++ b/Diseembar.mw
@@ -9,7 +9,7 @@ Sanadka miilaadiga [[bil|bishiisa]] toban iyo labaad ahna bisha ugu dambeyso san
 [[ar:ديسمبر]]
 [[arc:ܟܢܘܢ ܐ]]
 [[ast:Avientu]]
-[[ay:Jallu qallta]]
+[[ay:Jallu qallta phaxsi]]
 [[az:Dekabr]]
 [[bat-smg:Groudis]]
 [[be:Снежань]]
