--- a/Badweynta_Hindiya.mw
+++ b/Badweynta_Hindiya.mw
@@ -63,6 +63,7 @@
 [[mr:हिंदी महासागर]]
 [[ms:Lautan Hindi]]
 [[mt:Oċean Indjan]]
+[[new:भारतीय महासागर]]
 [[nl:Indische Oceaan]]
 [[nn:Det indiske havet]]
 [[no:Indiahavet]]
