روبوت  تعديل: [[wo:Bëj-saalumu Aamerig]]

--- a/Ameerikada_koonfureed.mw
+++ b/Ameerikada_koonfureed.mw
@@ -115,7 +115,7 @@
 [[tr:Güney Amerika]]
 [[uk:Південна Америка]]
 [[vi:Nam Mỹ]]
-[[wo:Bëj-saalumu Aamerik]]
+[[wo:Bëj-saalumu Aamerig]]
 [[yi:דרום אמעריקע]]
 [[zh:南美洲]]
 [[zh-min-nan:Lâm Bí-chiu]]
