*Empty MediaWiki Message*

--- a/Reer_Nuur.mw
+++ b/Reer_Nuur.mw
@@ -1,4 +1,4 @@
-Reer nuur waa beel ka mid ah qabiilka [[samaroon]] oo daga dagaanada u dhexeeya juuq (||Itoobiya]]) ilaa iyo dhuxunka ([[Somaliland]]). Beeshani waa Beel aad loogu yaqaan dagaaladii dhex maray iyada iyo jabhadii SNM ee isku dayaysay in ay xoog ku gasho dhulka Samaroon. Jahbadihii difaacayay dhulkooda ee reer nuur ayaa iyaga burbur ba'ani ku yimid intii ka danbaysay asaaskii somaliland arintan oo si fiican loogaga waramayo aragtida [[awdalaynta]] ayaa ah mid cajiib ah.
+Reer nuur waa beel ka mid ah qabiilka [[samaroon]] oo daga dagaanada u dhexeeya juuq ([[Itoobiya]]) ilaa iyo dhuxunka ([[Somaliland]]). Beeshani waa Beel aad loogu yaqaan dagaaladii dhex maray iyada iyo jabhadii SNM ee isku dayaysay in ay xoog ku gasho dhulka Samaroon. Jahbadihii difaacayay dhulkooda ee reer nuur ayaa iyaga burbur ba'ani ku yimid intii ka danbaysay asaaskii somaliland arintan oo si fiican loogaga waramayo aragtida [[awdalaynta]] ayaa ah mid cajiib ah.
 Beesha reer nuur waa beel ku caan ah dhaqashada xoolaha nool dhamaantood (Geel, lo'a adhi iyo gamaan) iyo sidoo kale [[Beeraha]].
 
 [[en:Reer Nuur]]
