--- a/Mareykanka.mw
+++ b/Mareykanka.mw
@@ -1,3 +1,3 @@
-dalka maraykanka waa dal kuyaala  waqooyiga america 
-waa cadawga koobaad ee islaamka waxana lagu shega dawladaha aduunka 
+dalka [[maraykanka]] waa dal kuyaala  waqooyiga [[america]] 
+waa cadawga koobaad ee [[islaamka]] waxana lagu shega dawladaha aduunka 
 ugu quwadaweyn
