*Empty MediaWiki Message*

--- a/Woqooyiga_Ameerika.mw
+++ b/Woqooyiga_Ameerika.mw
@@ -1,6 +1,6 @@
 [[Image:LocationNorthAmerica.png|thumb|right|250px|Ameerikada waqooyi]]
 *[[Canada]]
-*''USA''
+*''USA'' : [[Qaramada Midoobey ee Maraykanka]] ; [[Qaramada Midoobey ee Mareykanka]]
 *''Mexico''
 
 [[Image:North America satellite globe.jpg|thumb|right|250px|Ameerikada waqooyi]]
