*Empty MediaWiki Message*

--- a/Woqooyiga_Ameerika.mw
+++ b/Woqooyiga_Ameerika.mw
@@ -1,7 +1,9 @@
 [[Image:LocationNorthAmerica.png|thumb|right|250px|Ameerikada waqooyi]]
 *[[Canada]]
-*''USA'' : [[Qaramada Midoobey ee Maraykanka]] ; [[Qaramada Midoobey ee Mareykanka]]
+*''USA''
 *''Mexico''
+
+*[[Mareykan]]
 
 [[Image:North America satellite globe.jpg|thumb|right|250px|Ameerikada waqooyi]]
 
