--- a/Islaam.mw
+++ b/Islaam.mw
@@ -26,7 +26,7 @@ Arrintii ayaa waxaa maqlay nin reer bani kinaana ah markaasuu kaniisaddii tegey 
 Ka dib markuu Abraha soo gaaray togga Xasar ee Musdalifa iyo Mina u dhexeeya ayaa maroodigii istaagey oo diiday inuu u dhaqaaqo dhinicii kacbada, marka dhinaca kale loo jeediyana waa ordayey. Xaaladdu markey muddo sidaa ahayd ayaa Ilaahay markii dambe u soo diray shimbiro mid walba waddo saddex dhagax oo ay ku kala waddo afka iyo labada lugood. Ninkii uu dhagaxaasi ku dhacana wuu googo'ayey oo wuu dhimanayey. Dhagaxaantii dadkii dhammantood kuma wada dhicin ee waxay ku dhacday intuu Rabbi u qaddaray, intii kalena waa carareen iyagoo isjiiraya. Ninkii Abraha ahaa isagoo naf xumi ku jirto ayuu tegey Sanca oo uu ku dhintay. Qureysh oo markii ciidanku yimid buuraha ku kala carartay, markeey Abraha iyo ciidankiisii waxa qabsaday arkeen ayey guryohoodii ku soo laabteen. Qisadan waxaa ka warrantay suuratul-Fiil waxayna dhacday sannadkii uu Rasuulku SCW dhashay. waxaana loo bixiyay sannadkaas; sannadkii maroodiga (Caamul fiil).
 
 
-== Casharka 3aad ee Kitaabka Siirada Nebiga Muhammed saas
+== Casharka 3aad ee Kitaabka Siirada Nebiga Muhammed saas==
 
 QODIDDII SAMSAMKA IYO NADARKII ABDI MUDHALIB
 Maalin ayaa Cabdimudhalib oo hurda manaam loogu yimid lana amray inuu faago ceelka samsamka oo muddo hore duugmay, meel uu ahaana aan la garanayn. Manaamkii ayuu ku weydiiyey meeshuu ceelku ahaa waana loo sheegay. Goortuu hurdadii ka kacay ayuu meeshii tegey isaga oo uu la socdo wiilkiisii Xaarith oo uu markaas carruur ka qabay wuuna qoday. Markii ceelkii la helay ayaa qureysh kula doodday oo tiri: "Cabdimudhalibow waa ceelkii aabahayo Ismaaciil waxaana ku leenahay xaq ee aan kula wadaagsano." Hase yeeshee Cabdimudhalib wuu ka diidey arrinkaa oo wuxuu yiri: "mayeelayo arrinkaan aniga ayaa la igu khaas yeelay". Muddo markii la dooday oo arrinkii lagu kala bixi waayey ayaa la go'aansaday in loo xukun tago habar wax sheegsheegta. Habartii ayaa la wada aaday. Goortii meel cidla ah oo dhexe la marayo ayaa Cabdimudhalib iyo nimankii jifadiisa ahaa, ee reer Cabdimanaf, biyihii ka go'een markaasey raggii kale ee qureysh oo la socday weyddiisteen, hase ahaatee wey u diideen iyagoo ka baqaya in ay dhammaantood oon u wada dhintaan.
@@ -45,8 +45,7 @@ Cabdullaahi, oo sidaan soo sheegnayba ahaa nebiga aabbihiis, waxaa hooyadiis la 
 
 Abdul A.K.
 
-== '''CASHIRKA 5 EE QISADA NABI MOHAMMED SALLALAHU CALAYHI WASALLAM
-'''
+== CASHIRKA 5 EE QISADA NABI MOHAMMED SALLALAHU CALAYHI WASALLAM==
 
 QISADII BAXIIRA 
 Markuu Rasuulka SCW 12 sano jirey ayaa adeerkiis Abii-dhaalib iyo rag kale oo qureysh ka mid ah ay safar ugu kicitimeen dhinaca Shaam, wuxuu markaa Rasuulku scw ka codsadey adeerkiis inuu raaco, adeerkiisna waa uu ka yeelay. Dabadeed markuu safarkii baxay waxaa uu sii maray meel la yiraahdo Busra oo ay safarrada qureysheed ee Shaam u socda sii mari jireen uuna degganaa nin raahib (suufi) ahaa oo Baxiira la oran jiray heystayna diinta masiixiga, cilmina u lahaa waxyaalihii uu ilaahay ku sheegay Tawreet iyo Injiil. 
