--- a/Hargeysa.mw
+++ b/Hargeysa.mw
@@ -1,9 +1,8 @@
 [[Image:City of hargeisa (view).jpg|thumb|300px|Hargeysa]]
 
-[[Hargeysa]] Waa magaalo madaxda Somaliland. Waana magaalada labaad ee ugu weyn dalkii markii hore la,isku odhan jiray [[Somaliya]].
+[[Hargeysa]] Waa magaalo madaxda Gobolka Somaliland. Waana magaalada labaad ee ugu weyn dalka [[Somaliya]].
 
-Hargaysa waa magaalo madaxda dalkii la odhan jiray Somaliland 1960kii Lana midoobay Somalia
-Dhawr maalmood kadib. 1991 Somaliland waxay dib ulla soo noqotay xoriyadeedii. Hargaysa waa magaalo cusub oo lagu qiyaaso in ay jirto illaa 150 sanno.
+
 
 
 {{gumud}}
