--- a/Ceelafweyn.mw
+++ b/Ceelafweyn.mw
@@ -1,4 +1,4 @@
-wdegmada  ceel afweyn waa   gobolka  sanaag  ee  jamhuuriyada  [[somaliland]]
+degmada  ceel afweyn waa   gobolka  sanaag   ee  jamhuuriyada  [[somalia]]
 
 [[Category:Soomaaliya]]
 
