*Empty MediaWiki Message*

--- a/Xamarweyne.mw
+++ b/Xamarweyne.mw
@@ -1,5 +1,5 @@
 Xamar weyne waa xaafad ka mid ah xaafadaha gobolka banaadir waxayna ku taalaa magaalada [[Muqdisho]], waxayna leedahay tariikh weyn. 
-Xamar weyne waa meel laga helo Malaayga ugu fiican Soomaaliya isagoo noocyo badan sii kala leh sida Yuumbi, Jeedar, Tartaba, dadka ku nool waa dad asalkooda kasoo jeeda meelo kala duwan sida Boortaqiis, Joordan, Iraq & dalal kale, Waa dad jecel horumarka Farsamada IWM. Waa dad aan dhib badneyn jecel wanaajinta dadka danahoodana og. {{Jibriil.  www.saafifilms.com}}
+Xamar weyne waa meel laga helo Malaayga ugu fiican Soomaaliya isagoo noocyo badan sii kala leh sida Yuumbi, Jeedar, Tartaba, dadka ku nool waa dad asalkooda kasoo jeeda meelo kala duwan sida Boortaqiis, Joordan, Iraq & dalal kale, Waa dad jecel horumarka Farsamada IWM. Waa dad aan dhib badneyn jecel wanaajinta dadka danahoodana og.
 
 {{gumud}}
 
