*Empty MediaWiki Message*

--- a/Hargeysa.mw
+++ b/Hargeysa.mw
@@ -1,6 +1,6 @@
 [[Image:City of hargeisa (view).jpg|thumb|300px|Hargeysa]]
 
-[[Hargeysa]] Waa magaalo madaxda Gobolka Somaliland. Waana magaalada labaad ee ugu weyn dalka [[Somaliya]].
+[[Hargeysa]] Waa magaalo madaxda  Somaliland. Waana magaalada labaad ee ugu weyn dalka [[Somaliya]].
 
 
 
