--- a/Dhahar.mw
+++ b/Dhahar.mw
@@ -10,9 +10,9 @@ hawl galay in dib loofuro furitaanka dugsiga Sare, si ardayda kasoo baxda dugsig
 '''Caafimaadka :-''' Magaalada waxay leedahay xarumo caafimaad oo tiro badan sida Cusbitaalo , MCHyo iyo waliba Farmashiyo.
 
 Waxaa ka hawl gala magaaladda dhahar shaqaale loo tababaray arimaha quseeya caafimaadka isla markaasna sida ay ii sheegeen qaar ka tirsan shaqaalaha caafimaadka inaaney wax mushahar ah oo la sheego aaney qaadan balse ay jirto mar mar ay Talaalo iyo sameeyaan waxey sidoo kale wax aan la sheegin ka helaan hay’addo oo ku taakuleeya mararka qaarkood daawooyin aan sidaa usii badneyn oo la dhigo MCHyadda .
-'''
 
-Ganacsiga :-''' Xaga ganacsiga magaalada ayaa ah mid marwalba siiweynaanaya waxaana suuro galiyey nawaaxiga magaalada oo leh xoola kala duwan ahna meelaha soomaaliya ugu xoolaha badan. Magaaladu waxayna leedahay ganacsiyo kala duwan, waxayna aad ugu xirantahay dekeda magaalada Boosaaso.
+
+'''Ganacsiga :''' Xaga ganacsiga magaalada ayaa ah mid marwalba siiweynaanaya waxaana suuro galiyey nawaaxiga magaalada oo leh xoola kala duwan ahna meelaha soomaaliya ugu xoolaha badan. Magaaladu waxayna leedahay ganacsiyo kala duwan, waxayna aad ugu xirantahay dekeda magaalada Boosaaso.
 
 '''Fardaha:''' Magaaladani waxay caan ku tahay dooxooyinka iyo dhul daaqsimeedka xoolaha afarta
 meesi kuwada dhaqmi karaan, gaar ahaan fardaha nooca gobolka Sanaag caanka ku yahay
