--- a/Af-Ingiriisi.mw
+++ b/Af-Ingiriisi.mw
@@ -5,7 +5,7 @@ Wadamada luqada ingiriiska looga hadlo sida afkooda hooyo oo kale ayaa ka mid ah
 
 [[Category:Luqadaha]]
 
-[[af:Engels (taal)]]
+[[af:Engels]]
 [[als:Englische Sprache]]
 [[am:እንግሊዝኛ]]
 [[an:Idioma anglés]]
