روبوت  تعديل: [[bat-smg:Vuokītėjė]]

--- a/Jarmal.mw
+++ b/Jarmal.mw
@@ -18,7 +18,7 @@ Wadan [[Yurub]] ku yaala oo [[faransis]]ka iyo [[denmark]]i xad la wadaaga. Waan
 [[ay:Alimaña]]
 [[az:Almaniya]]
 [[bar:Deitschlånd]]
-[[bat-smg:Vuokėitėjė]]
+[[bat-smg:Vuokītėjė]]
 [[be:Германія]]
 [[be-x-old:Нямеччына]]
 [[bg:Германия]]
