--- a/Hindiya.mw
+++ b/Hindiya.mw
@@ -1,6 +1,6 @@
 [[Image:Inde_carte.png|right|thumb|280px|Hindiya]]
 
-'''Hindiya''' Waa Wadan ku yaala [[Aasiya]] waana wadanka Aduunka ugu dadka badan marka laga reebo Shiinaha. Magaalo madaxda wadanka Hindiya waa [[Niyuudelhi]] (English: New Delhi).
+'''Hindiya''' Waa Wadan ku yaala [[Aasiya]] waana wadanka Aduunka ugu dadka badan marka laga reebo [[Shiinaha]]. Magaalo madaxda wadanka Hindiya waa [[Niyuudelhi]] (English: New Delhi).
 
 [[Image:Flag_of_India.svg|100px]]
 
