--- a/Norway.mw
+++ b/Norway.mw
@@ -1,6 +1,6 @@
 [[Image:Europe location NOR.png|thumb|Norwey]]
 
-[[Oslo]]
+[[Oslo]] waa magaalo-madaxda dalka [[Norwey]].
 
 {{commonscat|Norway|Norwey}}
 
