--- a/Musanbiig.mw
+++ b/Musanbiig.mw
@@ -1,5 +1,5 @@
 [[Image:LocationMozambique.svg|thumb]]
-
+[[Image:Mz-map.png|thumb|right|Musaanbiiq]]
 '''Musaanbiiq''' waa wadan [[Afrika]]. madaxda wadanka Musaanbiiq waa [[Maputo]].
 
 {{commonscat|Mozambique|Musaanbiiq}}
