روبوت  إضافة: [[lbe:Ислам]]

--- a/Islaam.mw
+++ b/Islaam.mw
@@ -169,6 +169,7 @@ osmanbilad@hotmail.com,
 [[ky:Ислам]]
 [[la:Religio Islamica]]
 [[lb:Islam]]
+[[lbe:Ислам]]
 [[li:Islam]]
 [[lij:Islamiximo]]
 [[ln:Islamu]]
