--- a/Category:Afrika.mw
+++ b/Category:Afrika.mw
@@ -7,7 +7,7 @@
 [[ast:Categoría:África]]
 [[ay:Categoría:Aphrika]]
 [[az:Kateqoriya:Afrika]]
-[[bat-smg:Kategorija:Afrėka]]
+[[bat-smg:Kateguorėjė:Afrėka]]
 [[be:Катэгорыя:Афрыка]]
 [[be-x-old:Катэгорыя:Афрыка]]
 [[bg:Категория:Африка]]
@@ -35,7 +35,7 @@
 [[frp:Catègorie:Africa]]
 [[fy:Kategory:Afrika]]
 [[gd:Category:Afraga]]
-[[gl:Category:África]]
+[[gl:Categoría:África]]
 [[gv:Category:Yn Affrick]]
 [[he:קטגוריה:אפריקה]]
 [[hi:श्रेणी:अफ़्रीका]]
@@ -55,9 +55,9 @@
 [[ko:분류:아프리카]]
 [[kw:Category:Afrika]]
 [[la:Categoria:Africa]]
-[[lb:Category:Afrika]]
+[[lb:Kategorie:Afrika]]
 [[li:Categorie:Afrika]]
-[[ln:Category:Afríka]]
+[[ln:Catégorie:Afríka]]
 [[lt:Kategorija:Afrika]]
 [[lv:Kategorija:Āfrika]]
 [[mk:Категорија:Африка]]
