--- a/Category:Aasiya.mw
+++ b/Category:Aasiya.mw
@@ -10,7 +10,7 @@ Qaarada aasiya waa qaarada ugu dadka badan uguna baaxada weyn qaaradaha aduunka.
 [[ast:Categoría:Asia]]
 [[ay:Categoría:Azya]]
 [[az:Kateqoriya:Asiya]]
-[[bat-smg:Kategorija:Azėjė]]
+[[bat-smg:Kateguorėjė:Azėjė]]
 [[be:Катэгорыя:Азія]]
 [[be-x-old:Катэгорыя:Азія]]
 [[bg:Категория:Азия]]
@@ -38,7 +38,7 @@ Qaarada aasiya waa qaarada ugu dadka badan uguna baaxada weyn qaaradaha aduunka.
 [[frp:Catègorie:Asia]]
 [[fy:Kategory:Aazje]]
 [[gd:Category:Aisia]]
-[[gl:Category:Asia]]
+[[gl:Categoría:Asia]]
 [[gv:Category:Yn Aishey]]
 [[he:קטגוריה:אסיה]]
 [[hi:श्रेणी:एशिया]]
@@ -57,7 +57,7 @@ Qaarada aasiya waa qaarada ugu dadka badan uguna baaxada weyn qaaradaha aduunka.
 [[ko:분류:아시아]]
 [[kw:Category:Asi]]
 [[la:Categoria:Asia]]
-[[lb:Category:Asien]]
+[[lb:Kategorie:Asien]]
 [[li:Categorie:Azië]]
 [[lt:Kategorija:Azija]]
 [[lv:Kategorija:Āzija]]
