--- a/Ogaden.mw
+++ b/Ogaden.mw
@@ -1,6 +1,6 @@
 '''Ogaden''' waa dad [[Soomaali]] ah oo badankood dagan dalka [[Ethiopia]] kuwaas oo uu gumaysto kaligii taliyaha [[Meles Zenawi]]. Ogaden waxay daganyihiin dhul aad u wayn oo hadana barwaaqo ah dhulkaa ayaa waxaa lagu qiyaasaa 370 000 km²...
 
-qore samiirp or samiirpower
+qore samiir
 
 {{Gumud}}
 
