روبوت  إضافة: [[mr:रसायनशास्त्र]]

--- a/Kimisteri.mw
+++ b/Kimisteri.mw
@@ -92,6 +92,7 @@ Kimistari waa barashada aasaasiga ah ee sayniska maatarka( matter) iyo iskudhisk
 [[mk:Хемија]]
 [[ml:രസതന്ത്രം]]
 [[mn:Хими]]
+[[mr:रसायनशास्त्र]]
 [[ms:Kimia]]
 [[nds:Chemie]]
 [[nds-nl:Scheikunde]]
