روبوت  إضافة: [[id:Kategori:Negara di Eropa]]

--- a/Category:Wadamada_Yurub.mw
+++ b/Category:Wadamada_Yurub.mw
@@ -32,12 +32,13 @@
 [[ht:Kategori:Peyi nan Ewòp]]
 [[hu:Kategória:Európa országai]]
 [[hy:Կատեգորիա:Եվրոպական երկրներ]]
+[[id:Kategori:Negara di Eropa]]
 [[is:Flokkur:Evrópulönd]]
 [[ja:Category:ヨーロッパの国]]
 [[ka:კატეგორია:ევროპის ქვეყნები]]
 [[ko:분류:유럽의 나라]]
 [[la:Categoria:Nationes Europaeae]]
-[[lb:Category:Länner an Europa]]
+[[lb:Kategorie:Länner an Europa]]
 [[li:Categorie:Europese len]]
 [[lt:Kategorija:Europos valstybės]]
 [[lv:Kategorija:Eiropas valstis]]
