روبوت  إضافة: [[id:Kategori:Negara di Afrika]] تعديل: [[bat-smg:Kateguorėjė:Afrėkas valstībės]]

--- a/Category:Wadamada_Afrika.mw
+++ b/Category:Wadamada_Afrika.mw
@@ -7,7 +7,7 @@
 [[ar:تصنيف:دول أفريقيا]]
 [[ast:Categoría:Países d'África]]
 [[ay:Categoría:Jach'a markanaka Aphrika]]
-[[bat-smg:Kategorija:Afrėkas valstībės]]
+[[bat-smg:Kateguorėjė:Afrėkas valstībės]]
 [[be:Катэгорыя:Краіны Афрыкі]]
 [[be-x-old:Катэгорыя:Краіны Афрыкі]]
 [[bg:Категория:Африкански държави]]
@@ -32,6 +32,7 @@
 [[ht:Kategori:Peyi Afrik]]
 [[hu:Kategória:Afrika országai]]
 [[hy:Կատեգորիա:Աֆրիկյան երկրներ]]
+[[id:Kategori:Negara di Afrika]]
 [[ig:Category:Ala no n'ime Africa]]
 [[is:Flokkur:Afríkulönd]]
 [[it:Categoria:Stati dell'Africa]]
@@ -40,7 +41,7 @@
 [[kab:Taggayt:Timura n tefriqt]]
 [[ko:분류:아프리카의 나라]]
 [[la:Categoria:Nationes Africae]]
-[[lb:Category:Länner an Afrika]]
+[[lb:Kategorie:Länner an Afrika]]
 [[lij:Category:Stati de l'Africa]]
 [[lt:Kategorija:Afrikos valstybės]]
 [[lv:Kategorija:Āfrikas valstis]]
