روبوت  إضافة: [[qu:Katiguriya:Allpa llamk'ay]]

--- a/Category:Beeraha.mw
+++ b/Category:Beeraha.mw
@@ -21,7 +21,7 @@ Soomaalidu waxay beeraha u taqaannaa dhulka lagu beerto dalagyada loogu tala gal
 [[eu:Kategoria:Nekazaritza]]
 [[fi:Luokka:Maatalous]]
 [[fr:Catégorie:Agriculture]]
-[[gl:Category:Agricultura]]
+[[gl:Categoría:Agricultura]]
 [[he:קטגוריה:חקלאות]]
 [[hi:श्रेणी:कृषि]]
 [[hu:Kategória:Mezőgazdaság]]
@@ -46,6 +46,7 @@ Soomaalidu waxay beeraha u taqaannaa dhulka lagu beerto dalagyada loogu tala gal
 [[nrm:Category:Agritchultuthe]]
 [[pl:Kategoria:Rolnictwo]]
 [[pt:Categoria:Agricultura]]
+[[qu:Katiguriya:Allpa llamk'ay]]
 [[ro:Categorie:Agricultură]]
 [[ru:Категория:Сельское хозяйство]]
 [[scn:Catigurìa:Agricultura]]
