روبوت  إضافة: [[fy:Kategory:Natuerkunde]], [[nap:Categoria:Físeca]]

--- a/Category:Fiisigis.mw
+++ b/Category:Fiisigis.mw
@@ -28,8 +28,9 @@
 [[fa:رده:فیزیک]]
 [[fi:Luokka:Fysiikka]]
 [[fr:Catégorie:Physique]]
+[[fy:Kategory:Natuerkunde]]
 [[ga:Catagóir:Fisic]]
-[[gl:Category:Física]]
+[[gl:Categoría:Física]]
 [[he:קטגוריה:פיזיקה]]
 [[hi:श्रेणी:भौतिकी]]
 [[hr:Kategorija:Fizika]]
@@ -48,7 +49,7 @@
 [[kw:Category:Fisegieth]]
 [[la:Categoria:Physica]]
 [[lad:Category:Fisika]]
-[[lb:Category:Physik]]
+[[lb:Kategorie:Physik]]
 [[lmo:Category:Físega]]
 [[lt:Kategorija:Fizika]]
 [[lv:Kategorija:Fizika]]
@@ -58,6 +59,7 @@
 [[ms:Kategori:Fizik]]
 [[mt:Category:Fiżika]]
 [[nah:Categoría:Cemanahuatiliztli]]
+[[nap:Categoria:Físeca]]
 [[nds:Kategorie:Physik]]
 [[nl:Categorie:Natuurkunde]]
 [[nn:Kategori:Fysikk]]
