--- a/Isaaq.mw
+++ b/Isaaq.mw
@@ -3,11 +3,9 @@
 Isaaqu waa qabilka afraad ee somaliyeed waxa uu degaa waqooyiga .Isaaq wexeey ka soo jeedaan sheekh isaxaaq oo ka imaadey carabta ka imaadey siduu dadka waqooyiga ee beriga 13ad joogey diinta islaamka baro dadkaasi magacooda wuxuu ahaa oromo waxa xiligaas sheekh isaaq macalinkiisa ahaa sheekh [[samaroon]] oo isagu markii ay mudo joogeen geeriyooday xilkiina u igmaday isxaaq, waxa kale oo wehelinayay iyagana ciise. sadexduba waxay ku aasanyihiin xiis.
 
  
-== Taariikh ==
-
-asalka sheekh isaxaaq kama taagna wax muran ah oo waxa uu ahaa haashim qureesha ah oo ganacsade ah oo waxa uu u kala gooshi jiray carabta iyo dhulka xabashida oo imika dhulkan soomaalidu degan tahay ahaa dhul xabashi ay lahayd oo xabashidu waxa ay  gabadh u dhiseen sheekh isaxaaq oo sidaas ayuu tafiirtiisii ugu tarantay dhulka waqooyi iyo hawd.
-*lama odhan karo waxa uu kasoo jeedaa israaiil waayo waa layaqaanaa yibirta kasoo jeeda israaiil ii itoobiya dagan dhaqankooda iyo dhaqanka reer sheekh isaxaaq wax isu imaan karana maaha, oo dhaqanka qofka reer sh. isixaaq waad arkaysaa inuu yahay dhaqan carbeed badhax tiran , sida ay wax u sooraan , sida ay wax u magan geliyaan , sida ay dagaallada ugu ba'an yihiin , sida aanay markay dagaalka galaan u laynin dadka bir ma geydada loo yaqaan : sda: Dumarka, Carruurta, Waayeelka, Culimada iwm.[[Link title]]. 
-labada aragtiyood waxa aan ku xoojinayaa waraysiyo aan la yeeshay taariikh yahanada beesha laakiin ta hore ee ah in uu ka soo jeedo binu haashim waxa diiday qaar waxa ayna xujo uga dhigeen magaca oo ay yidhaahdeen bariga haashim ma jirin magaca axmed waana beentood , waayo Magaca Axmed waxaba la odhan jirey Suubbaneheenni Muxamed [csw]. qolada kale ee leh wuxu ka soo jeedaa Yuhuud iyaga toodu wax ka soo qaad malaha  waayo waxay daliil ka dhiganayaan godad laga helay gobolka [[togdheer]] ee ka tirsan [[soomalilaand]] oo laga helay far cibri ah oo ku qoray ( farta [[yuhuuda]] , taasina daliil ma noqonayso waayo dee fartan yuhuudda ee Cibriga yaa godadka geliyey, maadaama dhulkuba dhul xabashiyeed ahaa Sheekhuna dhowaan yimid ma isagaa ku aasay mise qoladii ka horraysey ayaa ku aastay?  ugu dambayn Reer Sh.isixaaq waa beel soomaliyeed oo ka mid ah beelaha waaweyn ee somaliya. asalkeeduna waa sidaa kor ku xusan ee ah in ay Carab ka soo jeeddo.
+isaaq waa qabiil soomaaliyeed, oo daga meelo badan, gaar ahaan waqooyiga dalka soomaaliya (somaliland)
+Irir Samaale ayaa loo yaqaan Dirta, Hawiyaha iyo Raxanweeynta. Isaaqu wuxuu ka mid yahay Dir.
+Dad badan oo wax garan ayaa ku caaya isaaqa in uu yahay Yuhuud, marna waxaa lagu sheegaa in eey yihiin carab. ISaaqu wuxuu u kala baxaa (garxajis, habar awal, habar jeclo, ayoup iyo arab)
 
 == Waqtiga xaadirka ah == 
 Beesha isaaq waxa ay dagaan woqooyiga [[soomaaliya]] markaa [[1960]] ayay hoos yimaadeer maamulkii soomaliya. intaa kadib [[1984]]kii ayay ku dhawaaqeen jabhadii [[SNM]] ( somali national movement ) jabhadani waxa ay la dagaalantay kaligii taliskii [[siyaad barre]]. 
