/* SIYAASADDA IYO MILATARIGA */

--- a/Cabdullaahi_Yuusuf.mw
+++ b/Cabdullaahi_Yuusuf.mw
@@ -10,31 +10,30 @@ C/laahi yuusuf ka hor intii aanan Xabsiga loo taxaabin, oo aysan xabsiha dhigin 
 
 ==SIYAASADDA IYO MILATARIGA ==
 
-Gaashaanle Sare - Ciidamda Xoogga Dalka Soomaaliyeed. 
+kornayl- ay kacaankii siiyeen kornaylnimada waaye. 
 
-Madaxa xafiiska shaqaalaha iyo tababarada ee Xoogga Dalka Soomaaliyeed. 
+Madaxa xafiiska shaqaalaha iyo tababarada ee koofiya calasta iyo canshuur aruurinta Dalka Soomaaliyeed. 
 
 Wuxuu ka horyimid af-ganbigii milatari ee [[Maxamed Siyaad Barre]] dalka ku qabsaday 1969-kii wuxuuna ku mutaystay lix sano oo xarig ah. 
 
-1977-kii Dagaalkii [[Ogaden|Ogaadeen]] kadib waxa uu kamid ahaa saraakiil  damacday in ay xukunka ka tuuraan xukuumaddii Barre. 
+1977-kii Dagaalkii somalia iyo ethiopia kadib waxa uu kamid ahaa saraakiil  damacday in ay xukunka ka tuuraan xukuumaddii Barre. asagoo u shaqeenaya wadanka ethiopia.
 
-1978- kii  Waxa uu [[Itoobiya]] ka aas-aasay jabhaddii SSDF. 
+1978- waxuu ku jiray jabhadii ay ethiopia aas-aastay SSDF. 
 
-1985-kii Waxaa xiray taliskii [[Mengistu Haile Mariam]] kadib markii uu ka horyimid sheegashada Itoobiyaa dhulkii ay jabhaddu xoraysay. 
+1985-kii Waxaa xiray taliskii [[Mengistu Haile Mariam]] kadib markii uu ka horyimid sheegashada Itoobiyaa dhulkii ay jabhaddu xoraysay.
+ 
+kama uusan qayb qaadan kacaankii uu jenaral caydiid uu tuuray isaga iyo jabhadiisii (USC)
 
+waxaa xabsiga ka soo daayay Ethiopia janeral Caydiid.
 1991-kii waxa uu dib u  habeeyay Jabhaddii SSDF kadib markii laga soo siidaayay xarigii Itoobiya. 
 
-1991-Waxa uu madax ka noqdaya guddigii xaaladda deg-degga ee goballadii Waqooyi Bari ([[Bari]], [[Nugaal]] iyo [[Mudug]]) oo hadda iyada oo ay ku biireen Sool, Sanaag iyo Cayn loo yaqaano Puntland.  Guddigu waxa uu mas’uul ka ahaa difaaca dalka ee colaadaha sokeeye. 
+1991-Waxa uu madax ka noqdaya guddigii xaaladda deg-degga ee goballadii Waqooyi Bari ([[Bari]], [[Nugaal]] iyo [[Mudug]]) oo hadda iyada oo ay ku biireen Sool, Sanaag iyo Cayn loo yaqaano Puntland.  
+1995- waxuu tagay mogadishu oo uu qayb ka qaatay dawladii uu janeral Caydiid uu dhisay. Col. Cabdullaahi Yusuf waxuu gobalada  puntland ka dhisan kula laabtay asagoo ah wasiirka arimaha gudaha
 
-1996-1997-kii Waxa uu kamid noqday guddoomiyayaashii wareega ahaa ee Golaha Badbaadada Qaranka (Sodare) 
+1998-kii waxaa loo doortay madaxweeynaha Dawlad–Gobaleedka Puntland 
 
-1998-kii waxaa loo doortay madaxweeynaha xukuumaddii koowaad ee Dawlad–Gobaleedka Puntland 
-
-Waxa uu xiriir aad u wacan la leeyahay madaxda dawladaha dariska ah ee Itoobiya iyo [[Keenaya]] iyo waliba [[Yaman]] 
-
-Saamayn wayn iyo qadarin qoto dheer ayuu ku leeyahay ummada Soomaaliyeed.
-
-C/laahi yuusuf waa nin wadaninimada caan ku ah waa nin jecel magaca soomaaliya inuu kor u kaco Mudane C/laahi yuusuf Axmed ma jecla amaanta balse waxtar ayuu jecelyahey mudane c/laahi yuusuf wuxuu caan ku yahey geesinimada waa xaqiiq
+Waxa uu xiriir aad u wacan la leeyahay madaxda dawlad dariska nala ah ee Ethiopia.
+C/laahi yuusuf waa nin jecel kursi ma ahan nin jecel maal aduunyo. naftiisa waxuu ku badalan karaa kursi wax kastana wuu u huri karaa
 
 waa yaxye axmed siciid oo ku nool garowe
 
