/* SIYAASADDA IYO MILATARIGA */

--- a/Cabdullaahi_Yuusuf.mw
+++ b/Cabdullaahi_Yuusuf.mw
@@ -10,9 +10,9 @@ C/laahi yuusuf ka hor intii aanan Xabsiga loo taxaabin, oo aysan xabsiha dhigin 
 
 ==SIYAASADDA IYO MILATARIGA ==
 
-kornayl- ay kacaankii siiyeen kornaylnimada waaye. 
+kornayl- ay kacaankii la soo shaqeeyay walow uu dagaal kaga horyimid 
 
-Madaxa xafiiska shaqaalaha iyo tababarada ee koofiya calasta iyo canshuur aruurinta Dalka Soomaaliyeed. 
+Madaxa xafiiska shaqaalaha iyo tababarada ee ciidamada koofiya calasta iyo canshuur aruurinta Dalka Soomaaliyeed. 
 
 Wuxuu ka horyimid af-ganbigii milatari ee [[Maxamed Siyaad Barre]] dalka ku qabsaday 1969-kii wuxuuna ku mutaystay lix sano oo xarig ah. 
 
