--- a/Xaliimo_Khaliif_Cumar_Magool.mw
+++ b/Xaliimo_Khaliif_Cumar_Magool.mw
@@ -10,3 +10,4 @@ Xaliimo Khaliif Cumar oo ku magac-dheereed Magool waxay ku dhalatey gobolka [[Hi
 [[Category:Shaqsiyadaad]]
 
 [[en:Magool]]
+wax eey taqaanay malah meelaha ayeey jaadka ku cuni jartay inta la dhageesanayo heesa heedana waxaa usocda danbi
