روبوت  إضافة: [[eml:Sitê]]

--- a/Magaalo.mw
+++ b/Magaalo.mw
@@ -20,6 +20,7 @@ Magalo waa meel dad badani degenyihiin.
 [[da:By]]
 [[de:Stadt]]
 [[el:Πόλη]]
+[[eml:Sitê]]
 [[en:Town]]
 [[eo:Urbo]]
 [[es:Ciudad]]
