--- a/Wikibidhiya.mw
+++ b/Wikibidhiya.mw
@@ -137,6 +137,7 @@
 [[sc:Wikipedia]]
 [[scn:Wikipedia]]
 [[sco:Wikipaedia]]
+[[sd:وڪيچيڪلو]]
 [[sh:Wikipedia]]
 [[si:විකිපීඩියා]]
 [[simple:Wikipedia]]
