--- a/Wikibidhiya.mw
+++ b/Wikibidhiya.mw
@@ -137,7 +137,7 @@
 [[sc:Wikipedia]]
 [[scn:Wikipedia]]
 [[sco:Wikipaedia]]
-[[sd:وڪيپيڊياا]]
+[[sd:وڪيپيڊيا]]
 [[sh:Wikipedia]]
 [[si:විකිපීඩියා]]
 [[simple:Wikipedia]]
