روبوت  إضافة: [[cr:ᐅᑌᓈᐤ]]

--- a/Magaalo.mw
+++ b/Magaalo.mw
@@ -14,6 +14,7 @@ Magalo waa meel dad badani degenyihiin.
 [[bs:Grad]]
 [[ca:Ciutat]]
 [[chr:ᎦᏚᎲᎢ]]
+[[cr:ᐅᑌᓈᐤ]]
 [[cs:Město]]
 [[cv:Хула]]
 [[cy:Tref]]
