روبوت  إضافة: [[pag:Germany]]

--- a/Jarmal.mw
+++ b/Jarmal.mw
@@ -124,6 +124,7 @@ Wadan [[Yurub]] ku yaala oo [[faransis]]ka iyo [[denmark]]i xad la wadaaga. Waan
 [[oc:Alemanha]]
 [[os:Герман]]
 [[pa:ਜ੍ਰਮਨੀ]]
+[[pag:Germany]]
 [[pam:Alemania]]
 [[pdc:Deitschland]]
 [[pih:Doichland]]
