روبوت  إضافة: [[de:Erigabo]]

--- a/Ceerigaabo.mw
+++ b/Ceerigaabo.mw
@@ -2,6 +2,7 @@ xarunta  goboklka  sanaag  ee  ceergaabo    waa  dalka   [[Somaliland]] by xusee
 
 [[Category:Soomaaliya]]
 
+[[de:Erigabo]]
 [[en:Ceerigaabo]]
 [[es:Erigabo]]
 [[pt:Erigavo]]
