*Empty MediaWiki Message*

--- a/Xamarweyne.mw
+++ b/Xamarweyne.mw
@@ -4,3 +4,4 @@ Xamar weyne waa meel laga helo Malaayga ugu fiican Soomaaliya isagoo noocyo bada
 {{gumud}}
 
 [[Category:Degmooyinka Soomaaliya]]
+waa magaalo fiican oo reer xamarka kubadan yihiin qofwalbana tagi karo
