/* Waqtiga xaadirka ah */

--- a/Isaaq.mw
+++ b/Isaaq.mw
@@ -7,8 +7,10 @@ isaaq waa qabiil soomaaliyeed, oo daga meelo badan, gaar ahaan waqooyiga dalka s
 Irir Samaale ayaa loo yaqaan Dirta, Hawiyaha iyo Raxanweeynta. Isaaqu wuxuu ka mid yahay Dir.
 Dad badan oo wax garan ayaa ku caaya isaaqa in uu yahay Yuhuud, marna waxaa lagu sheegaa in eey yihiin carab. ISaaqu wuxuu u kala baxaa (garxajis, habar awal, habar jeclo, ayoup iyo arab)
 
+Qabiilada daga Waqooyiga somalia ama somalialnd
 == Waqtiga xaadirka ah == 
-Beesha isaaq waxa ay dagaan woqooyiga [[soomaaliya]] markaa [[1960]] ayay hoos yimaadeer maamulkii soomaliya. intaa kadib [[1984]]kii ayay ku dhawaaqeen jabhadii [[SNM]] ( somali national movement ) jabhadani waxa ay la dagaalantay kaligii taliskii [[siyaad barre]]. 
+
+Beesha isaaq waxa ay dagaan woqooyiga [[soomaaliland]] markaa [[1960]] ayay hoos yimaadeer maamulkii soomaliya. intaa kadib [[1984]]kii ayay ku dhawaaqeen jabhadii [[SNM]] ( somali national movement ) jabhadani waxa ay la dagaalantay kaligii taliskii [[siyaad barre]]. 
 jabhadan oo markii [[xukuumadii soomaliya ay dhacday]] xilka la wareegtay woqooyiga soomaliya oo dhan la wareegtay ha ka hor yimaadaan jabhadihii beelaha soomalida woqooyiga sida jabhadii [[SDA]] ( somali Democratic Allience ) ee matalaysay qabiilka [[samaroon]], laakiin khilaafka waxa lagu xaliyay shirkii [[boorama]] ee lagu asaasay xukuumada [[soomaalilaand]]. 
 
 
