--- a/Category:Wadamada_Yurub.mw
+++ b/Category:Wadamada_Yurub.mw
@@ -6,7 +6,7 @@
 [[an:Categoría:Países d'Europa]]
 [[ar:تصنيف:دول أوروبا]]
 [[ay:Categoría:Jach'a markanaka Iwrupa]]
-[[bat-smg:Kategorija:Euruopas valstībės]]
+[[bat-smg:Kateguorėjė:Euruopas valstībės]]
 [[be-x-old:Катэгорыя:Краіны Эўропы]]
 [[bg:Категория:Европейски държави]]
 [[br:Rummad:Stadoù Europa]]
