روبوت  تعديل: [[ms:Perisytiharan Hak Asasi Manusia Sejagat]]

--- a/Baaqa_Caalamiga_ee_Xuquuqda_Aadanaha.mw
+++ b/Baaqa_Caalamiga_ee_Xuquuqda_Aadanaha.mw
@@ -192,7 +192,7 @@ Baaqan kuma jiraan wax loo fasiri karo in micnahoodu yahay in Dawlad, koox ama q
 [[ln:Lisakoli ya molongo ya makoki ya moto]]
 [[lt:Visuotinė žmogaus teisių deklaracija]]
 [[mk:Декларација за правата на човекот]]
-[[ms:Pengisytiharan Hak Asasi Manusia Sejagat]]
+[[ms:Perisytiharan Hak Asasi Manusia Sejagat]]
 [[nl:Universele Verklaring van de Rechten van de Mens]]
 [[nn:Menneskerettsfråsegna]]
 [[no:Menneskerettighetserklæringen]]
