--- a/Woqooyi_Galbeed.mw
+++ b/Woqooyi_Galbeed.mw
@@ -37,4 +37,4 @@ Gobolka woqooyi galbeed ee [[Soomaaliya]] wuxuu ku yaalaa waqooyiga-galbeed ee S
 [[nl:Woqooyi-Galbeed]]
 [[pt:Woqooyi Galbeed]]
 [[sv:Woqooyi Galbeed]]
-[[zh:沃庫宜·加彼德]]
+[[zh:沃戈伊加勒贝德州]]
