*Empty MediaWiki Message*

--- a/Saldanadihii_ka_jiray_dhulka_soomaliyeed.mw
+++ b/Saldanadihii_ka_jiray_dhulka_soomaliyeed.mw
@@ -1,1 +1,8 @@
-Sida taariikhda lagu hayo , magalada seylac waxay ahayd halka ay ka soo galeen carab badan oo xiriir ganacsi iyo mid diimeedba la lahaan jirey dadyowgii ku dhaqanaa geeska africa gar ahaan  gobolka awdal laga soo bilabo qarnigii 9aad, waxaa waqooyi bari ee qarada [[Afrika]] ka jiray lix dowladood oo waaweyn iyo kuwa aan sida usii weynayn waxay ahayeen. [[Shawa]] ,[[Adal]],[[Ifat]],[[Dawaro]], [[Fatagar]] iyo [[Hadiya]]. Marka aniga oo anan wada haynin tariikhda gabigood hadana waxa aan jeclaystay inan soo helo dowladii [[Adal]].
+Sida taariikhda lagu hayo , magalada seylac waxay ahayd halka ay ka soo galeen carab badan oo xiriir ganacsi iyo mid diimeedba la lahaan jirey dadyowgii ku dhaqanaa geeska africa gar ahaan  gobolka awdal laga soo bilabo qarnigii 9aad, waxaa waqooyi bari ee qarada Afrika ka jiray lix dowladood oo waaweyn iyo kuwa aan sida usii weynayn waxay ahayeen. 
+[[Shawa]]
+[[Adal]]
+[[Ifat]]
+[[Dawaro]]
+[[Fatagar]]
+[[Hadiya]]
+Marka aniga oo anan wada haynin tariikhda gabigood hadana waxa aan jeclaystay inan soo helo dowladii [[Adal]].
