Redirecting to [[Galdogob]]

--- a/Goldogob.mw
+++ b/Goldogob.mw
@@ -1,1 +1,5 @@
 #REDIRECT [[Galdogob]]
+Goldogob waa dagmo ku taala gobalka Mudug, Soomaaliya.
+Waxaa ku nool magaalada ilaa dad gaarayay 120 000 ilaa 150 000, waana magaalda 3aad ee ugu weyn dowlad gobaleedka Puntland, oo waxaa ka dad badan magaalooyinka Bosaso iyo Galkacyo.
+Magaalada goldogob oo ku taala meel istaraatiiji ah ayaa waxay isku xirtaa ganacsiga Ethiopia iyo somalia, waxayna u jirtaa xuduudka somalia iyo ethiopia u dhexeeya 5 KM.
+Magaalda masaafadeeda waa ilaa 14 KM oo dhiri ah.
