روبوت  تعديل: [[bat-smg:Kateguorėjė:Euruopa]]

--- a/Category:Yurub.mw
+++ b/Category:Yurub.mw
@@ -7,7 +7,7 @@
 [[ast:Categoría:Europa]]
 [[ay:Categoría:Iwrupa]]
 [[az:Kateqoriya:Avropa]]
-[[bat-smg:Kategorija:Euruopa]]
+[[bat-smg:Kateguorėjė:Euruopa]]
 [[be-x-old:Катэгорыя:Эўропа]]
 [[bg:Категория:Европа]]
 [[bo:Category:ཡོ་རོབ་གླིང་]]
@@ -38,7 +38,7 @@
 [[fy:Kategory:Jeropa]]
 [[ga:Catagóir:An Eoraip]]
 [[gd:Category:An Roinn-Eòrpa]]
-[[gl:Category:Europa]]
+[[gl:Categoría:Europa]]
 [[gn:Categoría:Europa]]
 [[got:Category:Aiwropa]]
 [[gv:Category:Yn Europey]]
@@ -51,7 +51,7 @@
 [[hy:Կատեգորիա:Եվրոպա]]
 [[ia:Categoria:Europa]]
 [[id:Kategori:Eropa]]
-[[io:Category:Europa]]
+[[io:Kategorio:Europa]]
 [[is:Flokkur:Evrópa]]
 [[it:Categoria:Europa]]
 [[ja:Category:ヨーロッパ]]
@@ -62,7 +62,7 @@
 [[kw:Category:Europa]]
 [[la:Categoria:Europa]]
 [[lad:Category:Evropa]]
-[[lb:Category:Europa]]
+[[lb:Kategorie:Europa]]
 [[li:Categorie:Europa]]
 [[lt:Kategorija:Europa]]
 [[lv:Kategorija:Eiropa]]
